--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>图书管理系统</title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <link rel="icon" type="image/x-icon" href="static/logo.png">
+    <link rel="icon" type="image/x-icon" href="./static/logo.png">
     <style>
       html,body{
         font-size: 16px;
