晚上修改提交

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
       html,body{
         font-size: 16px;
       }
+      body{
+        min-width: 1200px;
+      }
     </style>
   </head>
   <body>
