--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
       html,body{
         font-size: 16px;
       }
+      html{
+        height:100%;
+      }
       body{
-        min-width: 1200px;
+        min-height:100%;
       }
     </style>
   </head>
